add log stream
